# HomeReadings

./: Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
monitor/: forms.py  helpers.py  models.py  serializers.py  urls.py  views.py
monitor/migrations/: 0001_initial.py
monitor/templates/monitor/: upload_page.html
mysite/: settings.py  urls.py
